syntax = "proto3";

option java_multiple_files = true;
option java_package = "space.kscience.soroutines.transport.grpc";
package space.kscience.soroutines.transport.grpc;

import "Payload.proto";
import "ExecuteError.proto";

message ExecuteRequest {
  string accessName = 1;
  repeated Payload args = 2;
}

message ExecuteResult {
  string accessName = 1;
  Payload result = 2;
}

message Message {
  oneof content {
    ExecuteRequest request = 1;
    ExecuteResult result = 2;
    ExecuteError error = 3;
  }
}

service LibService {
  rpc execute(stream Message) returns (stream Message);
}
